Add script for images
Rewrite script to create images for a certain problem.
Add special folder for invalid LPP's.

--- a/Generate_Problems.ipynb
+++ b/Generate_Problems.ipynb
@@ -62,7 +62,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Akella\\TrainingSetBuilder\\problems\n"
+      "C:\\Users\\Akella\\TrainingSetBuilder\\problems\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\n"
      ]
     }
    ],
@@ -70,7 +71,8 @@
     "import ProblemsFolder as pf\n",
     "\n",
     "folder = pf.ProblemsFolder()\n",
-    "folder.makeProblemsFolder()"
+    "folder.makeProblemsFolder()\n",
+    "folder.makeInvalidFolder()"
    ]
   },
   {
@@ -91,10 +93,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00000\n",
       "C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00000\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00001\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00002\n",
       "C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00001\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00003\n",
       "C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00002\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00003\n"
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00004\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00005\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00006\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00007\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00008\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00009\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00010\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00011\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00003\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00012\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00013\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00014\n",
+      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00015\n"
      ]
     }
    ],
@@ -102,46 +120,9 @@
     "for problem in packet:\n",
     "    output = SG.createSolution()\n",
     "    if SG.isValid():\n",
-    "        print(folder.saveProblem())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "velvet-jewel",
-   "metadata": {},
-   "source": [
-    "Для каждой задачи формируется изображение области допустимых значений."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "sonic-fitness",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " |====================================================================================================| 100.0% \n"
-     ]
-    }
-   ],
-   "source": [
-    "from Problem import Problem\n",
-    "from lpp_tools import printProgressBar\n",
-    "paths = folder.paths()\n",
-    "\n",
-    "total = len(paths)\n",
-    "iteration = 0\n",
-    "\n",
-    "for path in paths:\n",
-    "    filename = os.path.join(path, 'lpp.txt')\n",
-    "    problem = Problem(filename)\n",
-    "    filename = os.path.join(path, 'figure.png')\n",
-    "    problem.plot(filename)\n",
-    "    iteration += 1\n",
-    "    printProgressBar(iteration, total)"
+    "        print(folder.saveProblem())\n",
+    "    else:\n",
+    "        print(folder.saveInvalid())"
    ]
   }
  ],
