--- a/Generate_Problems.ipynb
+++ b/Generate_Problems.ipynb
@@ -27,11 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------------------------------\n",
-      "Task generation has started.\n",
-      "-----------------------------------\n",
-      "20 of LPP problems successfully written to the file lpp.txt\n",
-      "\n"
+      "C:\\Users\\Akella\\lpp_problem-main\\packet.txt\n"
      ]
     }
    ],
@@ -41,7 +37,7 @@
     "\n",
     "filename = os.path.join(os.getcwd(), 'packet.txt')\n",
     "\n",
-    "packet = SG.ProblemsPacket(filename)"
+    "packet = SG.ProblemsPacket(filename, generate=False)"
    ]
   },
   {
@@ -62,8 +58,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Akella\\TrainingSetBuilder\\problems\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\n"
+      "C:\\Users\\Akella\\lpp_problem-main\\problems\n",
+      "C:\\Users\\Akella\\lpp_problem-main\\invalid\n"
      ]
     }
    ],
@@ -85,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "seasonal-bronze",
    "metadata": {},
    "outputs": [
@@ -93,36 +89,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00000\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00000\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00001\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00002\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00001\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00003\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00002\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00004\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00005\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00006\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00007\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00008\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00009\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00010\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00011\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00003\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00012\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00013\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00014\n",
-      "C:\\Users\\Akella\\TrainingSetBuilder\\invalid\\lpp_00015\n"
+      " |=========-------------------------------------------------------------------------------------------| 9.3% \r"
      ]
     }
    ],
    "source": [
+    "from lpp_tools import printProgressBar\n",
+    "\n",
     "for problem in packet:\n",
     "    output = SG.createSolution()\n",
-    "    if SG.isValid():\n",
-    "        print(folder.saveProblem())\n",
-    "    else:\n",
-    "        print(folder.saveInvalid())"
+    "    if output != \"Error!\":\n",
+    "        if SG.isValid():\n",
+    "            folder.saveProblem()\n",
+    "        else:\n",
+    "            folder.saveInvalid()\n",
+    "    printProgressBar(packet.index, packet.N)"
    ]
   }
  ],
