--- a/Generate_Retina.ipynb
+++ b/Generate_Retina.ipynb
@@ -26,6 +26,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "base.ret\n",
       "retina.ret\n"
      ]
     },
@@ -47,7 +48,8 @@
     "\n",
     "retina = Retina('config.ini')\n",
     "retina.createPoints()\n",
-    "retina.plot()"
+    "retina.plot()\n",
+    "retina.saveToFile(common=False)"
    ]
   },
   {
@@ -88,7 +90,7 @@
    "source": [
     "retina.rotateTo([150., 100., 50.])\n",
     "print(\"Writing output to the rotated retina file...\")\n",
-    "retina.saveToFile()\n",
+    "retina.saveToFile(common=True)\n",
     "print(\"Done.\")\n",
     "retina.plot()"
    ]
