--- a/Generate_Images.ipynb
+++ b/Generate_Images.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROBLEM_ID = 2"
+    "PROBLEM_ID = 1"
    ]
   },
   {
@@ -66,6 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "base.ret\n",
       "retina.ret\n"
      ]
     }
@@ -76,7 +77,7 @@
     "\n",
     "problem = Problem(folder.problemFilename(PROBLEM_ID))\n",
     "retina = Retina('config.ini')\n",
-    "retina.loadFromCommonFile()\n",
+    "retina.loadFromFile(common=True)\n",
     "#retina.plot()\n",
     "#problem.plot()"
    ]
@@ -99,12 +100,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00002\\7.png\n",
-      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00002\\8.png\n",
-      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00002\\9.png\n",
-      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00002\\10.png\n",
-      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00002\\11.png\n",
-      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00002\\12.png\n"
+      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00001\\7.png\n",
+      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00001\\8.png\n",
+      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00001\\9.png\n",
+      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00001\\10.png\n",
+      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00001\\11.png\n",
+      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00001\\12.png\n"
      ]
     }
    ],
@@ -132,10 +133,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00002\\trace0.png\n",
-      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00002\\trace1.png\n",
-      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00002\\trace2.png\n",
-      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00002\\trace3.png\n"
+      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00001\\trace0.png\n",
+      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00001\\trace1.png\n",
+      "Saved to C:\\Users\\Akella\\TrainingSetBuilder\\problems\\lpp_00001\\trace2.png\n"
      ]
     }
    ],
